--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   http: ^1.2.2
   permission_handler: ^11.1.0
   geocoding: ^2.0.0
+  curved_navigation_bar: ^1.0.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
