--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   geocoding: ^2.0.0
   curved_navigation_bar: ^1.0.6
   image_picker: ^1.1.2
+  flutter_iconly: ^1.0.2
+  google_fonts: ^5.1.0
+  badges: ^3.1.1
+  timelines: ^0.1.0
+  easy_stepper: ^0.7.3
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +77,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/services/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
