--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   easy_stepper: ^0.7.3
   rename_app: ^1.6.1
   fl_chart: ^0.69.0
+  animated_splash_screen: ^1.3.0
 
 
 dev_dependencies:
