--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
 
     <application android:label="FarmGuard" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
         
