--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   rename_app: ^1.6.1
   fl_chart: ^0.69.0
   animated_splash_screen: ^1.3.0
+  local_auth: ^2.3.0
+  lottie: ^2.4.0
 
 
 dev_dependencies:
